[package]
name = "toml_edit"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "lua native module for format-preserving TOML edits"

[lib]
name = "toml_edit"
crate-type = ["cdylib", "rlib"]

[dependencies]
mlua = { version = "0.10", features = ["lua51", "module", "macros"] }
toml_edit = { version = "0.22", features = ["parse"] }
